24 May 2011: Wouter
	- implemented patterns in the nsd.conf file.
	  they can be instantiated with include-pattern: x.
	  existing zone definitions keep working (backwards compatible), such
	  zones really have an implicit pattern and cannot_delete flag set.

20 May 2011: Wouter
	- from NSD_3_2 branch the fix: bug if the zonefile is changed for a
	secondary but stored transfers are applied, and stop ixfr to empty.
	The zone is flagged with error, and the good zone is still in nsd.db
	for NSD4.

17 May 2011: Wouter
	- unit test for code coverage on nsec3 ixfr.
	- tag 4.0.0-imp3 created
	- trunk is 4.0.0-imp4 under development.

13 May 2011: Matthijs
	- Fix bug #381 - Binary escaped and transfers.

13 May 2011: Wouter
	- Unit test nsec3 salt change and fix for sanity check of nsec3 chain.
	  pretty prints the nsec3 parameters if verbose.

12 May 2011: Wouter
	- more unit test for nsec3 precompile changes.
	- unit test for salt change, rehash in udb fix, remove last NSEC3
	  from chain works, NSEC3PARAM RR fixed up if RR added or removed
	  from NSEC3PARAM RRset, hashtrees cleared properly, precompile clear
	  more thorough (not dependant on nsec3_conditions).

11 May 2011: Wouter
	- fixes for nsec3 precompile code: precompile for empty nonterminals
	  created when an RR is added. If SOA removed, precompile stays
	  coherent even though domain_find_zone no longer returns correct zone.

21 April 2011: Wouter
	- unit test and fixes in nsec3 precompile code.

20 April 2011: Wouter
	- incremental NSEC3 precompile.

14 April 2011: Wouter
	- remove chnum. Added numlist sorted by domain.number.
	  domains that are not used are removed.

13 April 2011: Wouter
	- Fix is_existing flag for ENT when domain that has a shared ENT
	  is deleted by IXFR.
	- zonec can parse strings with RR in it.
	- unit test for namedb.

8 April 2011: Wouter
	- porting complete.
	- tag 4.0.0-imp2 created
	- trunk is version 4.0.0-imp3.

7 April 2011: Wouter