@@ -297,6 +297,7 @@ config_print_zone(nsd_options_t* opt, const char* k, int s, const char *o,
 		SERV_GET_STR(zonesdir, o);
 		SERV_GET_STR(difffile, o);
 		SERV_GET_STR(xfrdfile, o);
+		SERV_GET_STR(zonelistfile, o);
 		SERV_GET_STR(port, o);
 		/* int */
 		SERV_GET_INT(server_count, o);
@@ -375,6 +376,7 @@ config_test_print_server(nsd_options_t* opt)
 	print_string_var("zonesdir:", opt->zonesdir);
 	print_string_var("difffile:", opt->difffile);
 	print_string_var("xfrdfile:", opt->xfrdfile);
+	print_string_var("zonelistfile:", opt->zonelistfile);
 	printf("\txfrd_reload_timeout: %d\n", opt->xfrd_reload_timeout);
 	printf("\tverbosity: %d\n", opt->verbosity);
 
@@ -509,7 +511,12 @@ additional_checks(nsd_options_t* opt, const char* filename)
 				filename, opt->xfrdfile, opt->chroot);
 			errors ++;
                 }
-        }
+       		if (strncmp(opt->chroot, opt->zonelistfile, l) != 0) {
+			fprintf(stderr, "%s: zonelistfile %s is not relative to chroot %s.\n",
+				filename, opt->zonelistfile, opt->chroot);
+			errors ++;
+                }
+ }
 	if (atoi(opt->port) <= 0) {
 		fprintf(stderr, "%s: port number '%s' is not a positive number.\n",
 			filename, opt->port);
