@@ -34,6 +34,9 @@ server:
 database: "@dbfile@"
 .RE
 .RS 5
+zonelistfile: "@zonelistfile@"
+.RE
+.RS 5
 username: @user@
 .RE
 .RS 5
@@ -66,17 +69,21 @@ attributes, or a value.
 .P
 At the top level only 
 .B server:
-or
-.B zone: 
-or 
+and
 .B key: 
+and 
+.B pattern:
+and
+.B zone: 
 are allowed. These are followed by their attributes or the start of 
 a new 
 .B server:
-or
-.B zone: 
 or 
 .B key: 
+or
+.B pattern:
+or
+.B zone: 
 clause. The 
 .B zone:
 attribute is followed by zone options. The 
@@ -85,14 +92,16 @@ attribute is followed by global options for the
 .B NSD 
 server. A 
 .B key: 
-attribute is used to define keys for authentication.
+attribute is used to define keys for authentication. The
+.B pattern:
+attribute is followed by the zone options for zones that use the pattern.
 .P
 Files can be included using the 
 .B include:
 directive. It can appear anywhere, and takes a single filename as 
 an argument. Processing continues as if the text from the included 
 file was copied into the config file at that point.
-.S "Server Options"
+.SS "Server Options"
 .LP
 The global options (if not overridden from the NSD commandline) are 
 taken from the 
@@ -128,6 +137,13 @@ By default
 is used. The specified file is used to store the compiled 
 zone information. Same as commandline option 
 .BR \-f.
+.TP
+.B zonelistfile:\fR <filename>
+By default 
+.I @zonelistfile@
+is used. The specified file is used to store the dynamically added
+list of zones.  The list is written to by NSD to add and delete zones.
+It is a text file with a zone\-name and pattern\-name on each line.
 .TP
 .B identity:\fR <string>
 Returns the specified identity when asked for CH TXT ID.SERVER. 
@@ -230,6 +246,32 @@ zone transfers. 2 lists soft warnings that are encountered.
 .B hide\-version:\fR <yes or no>
 Prevent NSD from replying with the version string on CHAOS class 
 queries.
+.SS "Pattern Options"
+The
+.B pattern:
+clause is used to denote a set of options to apply to some zones.
+The same zone options as for a zone are allowed.
+.TP
+.B name:\fR <string>
+The name of the pattern.  This is a (case sensitive) string.
+.TP
+.B include-pattern:\fR <pattern-name>
+The options from the given pattern are included at this point in
+this pattern.  The referenced pattern must be defined above this one.
+.TP
+.B <zone option>:\fR <value>
+The zone options such as
+.BR zonefile ,
+.BR allow-notify ,
+.BR request-xfr ,
+.BR allow-axfr-fallback ,
+.BR notify ,
+.BR notify-retry ,
+.BR provide-xfr ,
+and
+.B outgoing-interface 
+can be given.  They are applied to the patterns and zones that include
+this pattern.
 .SS "Zone Options"
 .LP 
 For every zone the options need to be specified in one 
@@ -237,6 +279,10 @@ For every zone the options need to be specified in one
 clause. The access control list elements can be given multiple 
 times to add multiple servers. These elements need to be added
 explicitly.
+.LP
+For zones that are configured in the \fInsd.conf\fR config file their
+settings are hardcoded (in an implicit pattern for themselves only)
+and they cannot be dynamically deleted.
 .TP
 .B name:\fR <string>
 The name of the zone. This is the domain name of the apex of the 
@@ -323,6 +369,10 @@ The ip\-address is a plain IP address (IPv4 or IPv6).
 A port number can be added using a suffix of @number, for example 
 1.2.3.4@5300.
 .RE
+.TP
+.B include-pattern:\fR <pattern-name>
+The options from the given pattern are included at this point.
+The referenced pattern must be defined above this zone.
 .SS "Key Declarations"
 The 
 .B key: 
