@@ -3,6 +3,7 @@
 	  they can be instantiated with include-pattern: x.
 	  existing zone definitions keep working (backwards compatible), such
 	  zones really have an implicit pattern and cannot_delete flag set.
+	- work on zonelist read and storage.
 
 20 May 2011: Wouter
 	- from NSD_3_2 branch the fix: bug if the zonefile is changed for a
